--- a/register.html
+++ b/register.html
@@ -13,6 +13,34 @@
     />
 </head>
 <body>
-    <script src="js/register.js"></script>
+  <header>
+    <a href="index.html">
+      <img class="logo" src="imgs/logo.jpg" alt="" />
+    </a>
+    <section class="navigation">
+      <form class="search-form" action="search-results.html" method="get">
+        <input
+          type="text"
+          name="search"
+          class="search"
+          placeholder="Buscar..."
+        />
+        <button type="submit" class="search-button">Buscar</button>
+      </form>
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="categories.html">Categorías</a></li>
+      </ul>
+      <ul class="user">
+        <li><a href="login.html">Login</a></li>
+        <li><a href="register.html">Registro</a></li>
+      </ul>
+    </section>
+    <img class="mobile-menu" src="imgs/menumobile.png" alt="" />
+  </header>
+  <footer class="footer">
+    <div class="footer-item">Jonatan Maciel</div>
+  </footer>
+  <script src="js/register.js"></script>
 </body>
 </html>
