Creación de página home: html, js, estilos css

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
     </section>
     <img class="mobile-menu" src="imgs/menumobile.png" alt="" />
   </header>
+  <main>
+    <section class="container-products"></section>
+    <a class="add-more" href="#">Cargar más</a>
+  </main>
   <footer class="footer">
     <div class="footer-item">Jonatan Maciel</div>
   </footer>
