--- a/receta.html
+++ b/receta.html
@@ -38,6 +38,15 @@
     </section>
     <img class="mobile-menu" src="imgs/menumobile.png" alt="" />
   </header>
+  <section class="container-details">
+    <img class="img-receta-detalle" src="" alt="Imagen de la receta" />
+    <article>
+      <h1 class="name-receta-detalle"></h1>
+      <p class="preparation"></p>
+      <p class="cook-time"></p>
+      <p class="categorias">Categorías:</p>
+    </article>
+  </section>
   <footer class="footer">
     <div class="footer-item">Jonatan Maciel</div>
   </footer>
