Creación de página categories: html, js, estilos css

--- a/categories.html
+++ b/categories.html
@@ -38,6 +38,10 @@
     </section>
     <img class="mobile-menu" src="imgs/menumobile.png" alt="" />
   </header>
+  <main class="main-categorias">
+    <h1 class="title-categorias">Categorías de Recetas</h1>
+    <div class="container-tags"></div>
+  </main>
   <footer class="footer">
     <div class="footer-item">Jonatan Maciel</div>
   </footer>
