Creación página category: html, js, mismos estilos que las recetas de la home

--- a/category.html
+++ b/category.html
@@ -38,6 +38,8 @@
     </section>
     <img class="mobile-menu" src="imgs/menumobile.png" alt="" />
   </header>
+  <h1 class="title-categorias"></h1>
+    <section class="container-products"></section>
   <footer class="footer">
     <div class="footer-item">Jonatan Maciel</div>
   </footer>
