Creación de página search-results: html, js, mismos estilos que las recetas de la home

--- a/search-results.html
+++ b/search-results.html
@@ -38,6 +38,9 @@
     </section>
     <img class="mobile-menu" src="imgs/menumobile.png" alt="" />
   </header>
+  <main>
+    <section class="container-products"></section>
+  </main>
   <footer class="footer">
     <div class="footer-item">Jonatan Maciel</div>
   </footer>
