Creación de página login: html, js, estilos css

--- a/login.html
+++ b/login.html
@@ -38,6 +38,27 @@
     </section>
     <img class="mobile-menu" src="imgs/menumobile.png" alt="" />
   </header>
+  <main>
+    <div class="main-container">
+      <div class="row-center">
+        <div class="column-medium">
+          <h2>Login</h2>
+          <form method="get" class="form-contact" action="index.html">
+            <div class="group-form">
+              <label for="email">Correo electrónico</label>
+              <input type="email" name="email" id="email" class="input-control"/>
+            </div>
+            <div class="group-form">
+              <label for="password">Contraseña</label>
+              <input type="password"name="password" id="password"class="input-control"/>
+            </div>
+            <a href="register.html">No tengo cuenta</a>
+            <button type="submit" class="button-submit">ENVIAR</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </main>
   <footer class="footer">
     <div class="footer-item">Jonatan Maciel</div>
   </footer>
