Borrado de mobile-menu  y cambios en el css, htmls  para lograr un buen responsive. Mejora del orden en htmls

--- a/category.html
+++ b/category.html
@@ -19,12 +19,7 @@
     </a>
     <section class="navigation">
       <form class="search-form" action="search-results.html" method="get">
-        <input
-          type="text"
-          name="search"
-          class="search"
-          placeholder="Buscar..."
-        />
+        <input type="text" name="search" class="search" placeholder="Buscar..."/>
         <button type="submit" class="search-button">Buscar</button>
       </form>
       <ul class="menu">
@@ -36,7 +31,6 @@
         <li><a href="register.html">Registro</a></li>
       </ul>
     </section>
-    <img class="mobile-menu" src="imgs/menumobile.png" alt="" />
   </header>
   <h1 class="title-categorias"></h1>
     <section class="container-products"></section>
