--- a/index.html
+++ b/index.html
@@ -19,12 +19,7 @@
     </a>
     <section class="navigation">
       <form class="search-form" action="search-results.html" method="get">
-        <input
-          type="text"
-          name="search"
-          class="search"
-          placeholder="Buscar..."
-        />
+        <input type="text" name="search" class="search" placeholder="Buscar..."/>
         <button type="submit" class="search-button">Buscar</button>
       </form>
       <ul class="menu">
@@ -36,9 +31,8 @@
         <li><a href="register.html">Registro</a></li>
       </ul>  
     </section>
-    <img class="mobile-menu" src="imgs/menumobile.png" alt="" />
   </header>
-  <main>
+  <main class="main-home">
     <section class="container-products"></section>
     <a class="add-more" href="#">Cargar más</a>
   </main>
