--- a/login.html
+++ b/login.html
@@ -19,12 +19,7 @@
     </a>
     <section class="navigation">
       <form class="search-form" action="search-results.html" method="get">
-        <input
-          type="text"
-          name="search"
-          class="search"
-          placeholder="Buscar..."
-        />
+        <input type="text" name="search" class="search" placeholder="Buscar..."/>
         <button type="submit" class="search-button">Buscar</button>
       </form>
       <ul class="menu">
@@ -36,29 +31,30 @@
         <li><a href="register.html">Registro</a></li>
       </ul>
     </section>
-    <img class="mobile-menu" src="imgs/menumobile.png" alt="" />
   </header>
-  <main>
-    <div class="main-container">
-      <div class="row-center">
-        <div class="column-medium">
-          <h2>Login</h2>
-          <form method="get" class="form-contact" action="index.html">
-            <div class="group-form">
-              <label for="email">Correo electrónico</label>
-              <input type="email" name="email" id="email" class="input-control"/>
-            </div>
-            <div class="group-form">
-              <label for="password">Contraseña</label>
-              <input type="password"name="password" id="password"class="input-control"/>
-            </div>
-            <a href="register.html">No tengo cuenta</a>
-            <button type="submit" class="button-submit">ENVIAR</button>
-          </form>
+  <div class="container-forms">
+    <main>
+      <div class="main-container">
+        <div class="row-center">
+          <div class="column-medium">
+            <h2>Login</h2>
+            <form method="get" class="form-contact" action="index.html">
+              <div class="group-form">
+                <label for="email">Correo electrónico</label>
+                <input type="email" name="email" id="email" class="input-control"/>
+              </div>
+              <div class="group-form">
+                <label for="password">Contraseña</label>
+                <input type="password"name="password" id="password"class="input-control"/>
+              </div>
+              <a href="register.html">No tengo cuenta</a>
+              <button type="submit" class="button-submit">ENVIAR</button>
+            </form>
+          </div>
         </div>
       </div>
-    </div>
-  </main>
+    </main>
+  </div>
   <footer class="footer">
     <div class="footer-item">Jonatan Maciel</div>
   </footer>
