--- a/receta.html
+++ b/receta.html
@@ -19,12 +19,7 @@
     </a>
     <section class="navigation">
       <form class="search-form" action="search-results.html" method="get">
-        <input
-          type="text"
-          name="search"
-          class="search"
-          placeholder="Buscar..."
-        />
+        <input type="text" name="search" class="search" placeholder="Buscar..."/>
         <button type="submit" class="search-button">Buscar</button>
       </form>
       <ul class="menu">
@@ -36,17 +31,20 @@
         <li><a href="register.html">Registro</a></li>
       </ul>
     </section>
-    <img class="mobile-menu" src="imgs/menumobile.png" alt="" />
   </header>
-  <section class="container-details">
-    <img class="img-receta-detalle" src="" alt="Imagen de la receta" />
-    <article>
-      <h1 class="name-receta-detalle"></h1>
-      <p class="preparation"></p>
-      <p class="cook-time"></p>
-      <p class="categorias">Categorías:</p>
-    </article>
-  </section>
+  <div class="container-receta">
+    <section class="container-details">
+      <div class="container-img-receta">
+        <img class="img-receta-detalle" src="" alt="Imagen de la receta" />
+      </div>
+      <article>
+        <h1 class="name-receta-detalle"></h1>
+        <p class="preparation"></p>
+        <p class="cook-time"></p>
+        <p class="categorias">Categorías:</p>
+      </article>
+    </section>
+  </div>
   <footer class="footer">
     <div class="footer-item">Jonatan Maciel</div>
   </footer>
