--- a/register.html
+++ b/register.html
@@ -31,34 +31,35 @@
         <li><a href="register.html">Registro</a></li>
       </ul>
     </section>
-    <img class="mobile-menu" src="imgs/menumobile.png" alt="" />
   </header>
-  <main>
-    <div class="main-container">
-      <div class="row-center">
-        <div class="column-medium">
-          <h2>Registrate</h2>
-          <form method="get" class="form-contact" action="login.html">
-            <div class="group-form">
-              <label for="email">Correo electrónico</label>
-              <input type="email" name="email" id="email" class="input-control"/>
-              <div class="feedback-error email"></div>
-            </div>
-            <div class="group-form">
-              <label for="password">Contraseña</label>
-              <input type="password" name="password" id="password" class="input-control"/>
-              <div class="feedback-error password"></div>
-            </div>
-            <div class="checkbox-terms">
-              <input type="checkbox" name="terms" id="terms" class="input-checkbox" required />
-              <label for="terms" class="label-checkbox">Términos y condiciones</label><br />
-            </div>
-            <button type="submit" class="button-submit">ENVIAR</button>
-          </form>
+  <div class="container-forms">
+    <main>
+      <div class="main-container">
+        <div class="row-center">
+          <div class="column-medium">
+            <h2>Registrate</h2>
+            <form method="get" class="form-contact" action="login.html">
+              <div class="group-form">
+                <label for="email">Correo electrónico</label>
+                <input type="email" name="email" id="email" class="input-control"/>
+                <div class="feedback-error email"></div>
+              </div>
+              <div class="group-form">
+                <label for="password">Contraseña</label>
+                <input type="password" name="password" id="password" class="input-control"/>
+                <div class="feedback-error password"></div>
+              </div>
+              <div class="checkbox-terms">
+                <input type="checkbox" name="terms" id="terms" class="input-checkbox" required />
+                <label for="terms" class="label-checkbox">Términos y condiciones</label><br />
+              </div>
+              <button type="submit" class="button-submit">ENVIAR</button>
+            </form>
+          </div>
         </div>
       </div>
-    </div>
-  </main>
+    </main>
+  </div>
   <footer class="footer">
     <div class="footer-item">Jonatan Maciel</div>
   </footer>
